--- a/sass/vtex.my-account.scss
+++ b/sass/vtex.my-account.scss
@@ -489,6 +489,7 @@
       font-weight: bold;
       letter-spacing: 0;
       line-height: 50px;
+      transform: translateX(-22px);
     }
 
     .addressEdit {
@@ -517,7 +518,7 @@
     .profile {
       &::before {
         content: '/ Profilo';
-        transform: translateY(-165px) translateX(-168px);
+        transform: translateY(-147px) translateX(-168px);
         position: absolute;
         color: #332C32;
         font-family: Roboto;
@@ -533,6 +534,7 @@
         }
       }
       position: relative;
+      transform: translateY(-27px);
       .profileBoxContainer {
         .boxContainerBody {
           padding-bottom: 0;
@@ -564,8 +566,7 @@
           background: transparent;
           color: $blue-active;
           position: absolute;
-          top: -60px;
-          left: 170px;
+          transform: translate(-55px,-303px);
           font-size: 16px;
           line-height: 19px;
           font-weight: 500;
@@ -1183,4 +1184,11 @@
 
 :global(.vtex-my-account-1-x-addressBox){
   transform: translateY(26px);
+}
+
+.addressList{
+  :global(.t-heading-4){
+    position: absolute;
+    transform: translateY(123px);
+  }
 }
