--- a/sass/product/vtex.slider-layout.scss
+++ b/sass/product/vtex.slider-layout.scss
@@ -130,15 +130,15 @@
 .sliderLeftArrow {
   &--shelf-also-view {
     position: absolute;
-    top: -4.3rem;
-    right: 2rem;
+    top: -68px;
+    right: 32px;
     left: auto;
   }
 }
 .sliderRightArrow {
   &--shelf-also-view {
     position: absolute;
-    top: -4.3rem;
+    top: -68px;
   }
 }
 .caretIcon {
