--- a/sass/vtex.my-account.scss
+++ b/sass/vtex.my-account.scss
@@ -256,8 +256,8 @@
   .addressCreate {
     padding: 0;
     &::before {
-      content: '/ Aggiungi indirizzo';
-      transform: translateY(-149px) translateX(-168px);
+      content: '/ Aggiungi nuovo indirizzo';
+      transform: translateY(-149px) translateX(-69px);
       position: absolute;
       color: #332C32;
       font-family: Roboto;
@@ -266,15 +266,46 @@
       letter-spacing: 0;
       padding: 2px 0 0 20px;
       line-height: 14px;
-      background-image: url('assets/icons/home.svg');
+      // background-image: url('assets/icons/home.svg');
       background-repeat: no-repeat;
       @media screen and (max-width: 48rem) { 
         display: none;
       }
     }
+    
+    :global(.vtex-my-account-1-x-boxContainer) {
+      &::before {
+        content: '/ I miei indirizzi';
+        transform: translateY(-149px) translateX(-168px);
+        position: absolute;
+        color: #8E8E8E;
+        font-family: Roboto;
+        font-size: 14px;
+        font-weight: 400;
+        letter-spacing: 0;
+        padding: 2px 0 0 20px;
+        line-height: 14px;
+        background-image: url('assets/icons/home.svg');
+        background-repeat: no-repeat;
+        @media screen and (max-width: 48rem) { 
+          display: none;
+        }
+      }
+    }
 
+    :global(.vtex-address-form-4-x-input),
+    :global(.vtex-input-prefix__group),
+    :global(.vtex-address-form-4-x-container) {
+      border-color: #DFDFDF;
+    }
+    
     :global(.flex-auto) {
       max-width: 870px;
+    }
+
+    :global(.vtex-input__label),
+    :global(.vtex-dropdown__label) {
+      color: #878787;
     }
 
     .boxContainer {
@@ -286,30 +317,51 @@
         flex-wrap: wrap;
         gap: 15px;
         width: 100%;
+        &::before {
+          content: 'Aggiungi nuovo indirizzo';
+          color: #332C32;
+          font-family: Roboto;
+          font-size: 28px;
+          font-weight: bold;
+          letter-spacing: 0;
+          line-height: 33px;
+          position: absolute;
+          transform: translateY(-84px) translateX(-12px);
+          background-color: white;
+          @media screen and (max-width: 48rem) { 
+            transform: translateY(-65px) translateX(4px);
+            font-size: 24px;
+          }
+        }
       }
 
       :global(.vtex-address-form__country),
       :global(.vtex-address-form__postalCode) {
         width: 45%;
+        padding-bottom: 0;
       }
 
       :global(.vtex-address-form__container) {
         display: flex;
         flex-wrap: wrap;
         gap: 0 15px;
+        padding-bottom: 0;
       }
 
       :global(.vtex-address-form__street),
       :global(.vtex-address-form__receiverName) {
         width: 40%;
+        padding-bottom: 0;
       }
 
       :global(.vtex-address-form__number) {
         width: 20%;
+        padding-bottom: 0;
       }
 
       :global(.vtex-address-form__complement) {
         width: 28%;
+        padding-bottom: 6px;
       }
 
       :global(.vtex-address-form__city),
@@ -940,6 +992,7 @@
           display: block !important;
           :global(.vtex-button) {
             width: 100% !important;
+            margin-top: 50px;
           }
         }
 
@@ -952,6 +1005,7 @@
         :global(.vtex-address-form__city),
         :global(.vtex-address-form__state) {
           width: 100% !important;
+          padding-bottom: 10px;
         }
 
         :global(.vtex-address-form__container) {
