--- a/sass/vtex.my-account.scss
+++ b/sass/vtex.my-account.scss
@@ -77,7 +77,7 @@
     padding: 0;
     &::before {
       content: '/ Modifica Profilo';
-      transform: translateY(-149px) translateX(-168px);
+      transform: translateY(-159px) translateX(-168px);
       position: absolute;
       color: #332C32;
       font-family: Roboto;
@@ -185,7 +185,7 @@
   .addressList {
     &::before {
       content: '/ Indirizzi';
-      transform: translateY(-162px) translateX(-168px);
+      transform: translateY(-171px) translateX(-168px);
       position: absolute;
       color: #332C32;
       font-family: Roboto;
@@ -257,7 +257,7 @@
     padding: 0;
     &::before {
       content: '/ Aggiungi nuovo indirizzo';
-      transform: translateY(-149px) translateX(-69px);
+      transform: translateY(-160px) translateX(-69px);
       position: absolute;
       color: #332C32;
       font-family: Roboto;
@@ -276,7 +276,7 @@
     :global(.vtex-my-account-1-x-boxContainer) {
       &::before {
         content: '/ I miei indirizzi';
-        transform: translateY(-149px) translateX(-168px);
+        transform: translateY(-160px) translateX(-168px);
         position: absolute;
         color: #8E8E8E;
         font-family: Roboto;
@@ -300,7 +300,7 @@
     }
     
     :global(.flex-auto) {
-      max-width: 870px;
+      max-width: 920px;
     }
 
     :global(.vtex-input__label),
@@ -310,7 +310,7 @@
 
     .boxContainer {
       border: none;
-      max-width: 870px;
+      max-width: 920px;
       :global(.vtex-my-account-1-x-boxContainerBody) {
         padding-right: 0;
         display: flex;
@@ -337,7 +337,7 @@
 
       :global(.vtex-address-form__country),
       :global(.vtex-address-form__postalCode) {
-        width: 45%;
+        width: 49%;
         padding-bottom: 0;
       }
 
@@ -349,24 +349,27 @@
       }
 
       :global(.vtex-address-form__street),
+      :global(.vtex-address-form__city) {
+        width: 49%;
+        padding-bottom: 0;
+      }
       :global(.vtex-address-form__receiverName) {
-        width: 40%;
+        width: 24%;
         padding-bottom: 0;
       }
 
       :global(.vtex-address-form__number) {
-        width: 20%;
-        padding-bottom: 0;
+        width: 23%;
+        padding-bottom: 12px;
       }
 
       :global(.vtex-address-form__complement) {
-        width: 28%;
-        padding-bottom: 6px;
+        width: 24%;
+        padding-bottom: 0;
       }
 
-      :global(.vtex-address-form__city),
       :global(.vtex-address-form__state) {
-        width: 24%;
+        width: 23%;
       }
 
       :global(.c-on-disabled) {
@@ -413,7 +416,7 @@
           flex-wrap: wrap;
           gap: 15px;
 
-          :global(.vtex-address-form__street),
+          :global(.vtex-address-form__street) 
           :global(.vtex-address-form__receiverName) {
             width: 40%;
           }
@@ -445,7 +448,7 @@
   :global(.vtex-account__cards-list) {
     &::before {
       content: '/ Carte di credito';
-      transform: translateY(-162px) translateX(-168px);
+      transform: translateY(-171px) translateX(-168px);
       position: absolute;
       color: #332C32;
       font-family: Roboto;
@@ -467,7 +470,7 @@
     padding-left: 20px;
     &::before {
       content: '/ Autenticazione';
-      transform: translateY(-162px) translateX(-190px);
+      transform: translateY(-171px) translateX(-187px);
       position: absolute;
       color: #332C32;
       font-family: Roboto;
@@ -572,7 +575,7 @@
     .profile {
       &::before {
         content: '/ Profilo';
-        transform: translateY(-165px) translateX(-168px);
+        transform: translateY(-174px) translateX(-168px);
         position: absolute;
         color: #332C32;
         font-family: Roboto;
@@ -688,7 +691,7 @@
       padding-left: 2rem;
       &::before {
         content: '/ Nuova carta';
-        transform: translateY(-161px) translateX(-200px);
+        transform: translateY(-171px) translateX(-200px);
         position: absolute;
         color: #332C32;
         font-family: Roboto;
@@ -748,7 +751,7 @@
     :global(.vtex-account__orders-list) {
       &::before {
         content: '/ Ordini';
-        transform: translateY(-161px) translateX(-168px);
+        transform: translateY(-171px) translateX(-168px);
         position: absolute;
         color: #332C32;
         font-family: Roboto;
@@ -785,7 +788,7 @@
   :global(.legacy-orders) {
     &::before {
       content: '/ Legacy Orders';
-      transform: translateY(-162px) translateX(-168px);
+      transform: translateY(-171px) translateX(-168px);
       position: absolute;
       color: #332C32;
       font-family: Roboto;
@@ -806,7 +809,7 @@
   :global(.wish-list) {
     &::before {
       content: '/ La mia lista dei desideri';
-      transform: translateY(-162px) translateX(-168px);
+      transform: translateY(-171px) translateX(-168px);
       position: absolute;
       color: #332C32;
       font-family: Roboto;
