--- a/react/components/CustomMegaMenu/style.css
+++ b/react/components/CustomMegaMenu/style.css
@@ -229,7 +229,8 @@
     list-style-type: none;
     background-color: #ffffff;
     min-width: 100%;
-    padding: 18px 0;
+    padding: 6px 0;
+    border-bottom: 1px solid #D8D8D8;
   }
 
   .category-menu-item {
@@ -264,6 +265,7 @@
   }
   .mobile-mega-menu {
     top: 50px;
+    left: -1px;
     z-index: 2;
     height: 100vh;
     position: absolute;
@@ -283,7 +285,6 @@
   .mobile-subcategory-overflow {
     max-height: 100vh;
     overflow-y: auto;
-    padding: 0;
   }
 
   .mobile-mega-menu-title:before {
@@ -332,10 +333,10 @@
     top: 0;
     right: 0;
     width: 100vw;
-    height: 100vh;
+    height: 200vh;
     background-color: white;
     z-index: 5;
-    padding-left: 24px;
+    padding-left: 40px;
   }
 
   .subcategory-hidden {
