--- a/sass/login/vtex.login.scss
+++ b/sass/login/vtex.login.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   max-width: 1440px;
   width: auto;
+  padding: 0 0 14rem 0;
 
   &--emailAndPassword,
   &--emailVerification {
@@ -19,7 +20,10 @@
 
   .loginOptionsContainer,
   .contentForm {
-    padding: 0;
+    padding: 24px 60px;
+    @include breakpoint("mobile"){
+        padding:0px;
+      }
   }
 
   .loginOptionsContainer {
@@ -29,8 +33,8 @@
     border-radius: 4px;
     background-color: #F4F7FA;
     @include breakpoint("mobile"){
-        margin-top: 5rem;
-        max-width: 324px;
+        margin-top: 8rem;
+        width: 100%;
     }
     .optionsSticky {
         .formTitle {
@@ -52,9 +56,7 @@
                     line-height: 24px;
                   
             }
-            @include breakpoint("mobile"){
-                    transform: translateX(-53px);
-                  }
+      
         }
 
         .optionsList {
@@ -88,7 +90,7 @@
                          position: absolute;
                          transform: translateY(-8px);
                          @include breakpoint("mobile"){
-                            transform: translateX(-80px);
+                            width: 100%;
                             position: static;
                             display: inline-block;
                          }
@@ -126,7 +128,10 @@
               font-weight: 300;
               color: #111;
               padding: 0;
-              margin-bottom: 32px;
+              margin-bottom: 22px;
+              @include breakpoint("mobile"){
+                margin-bottom: 10px;
+             }
               &::before {
                   content: "Ricevi il codice di accesso via email";
                   font-size: 28px !important;
@@ -478,7 +483,7 @@
     position: absolute;
     left: 50%;
     transform: translateX( calc(-50% - 214px));
-    bottom: 90px;
+    bottom: 147px;
 
     @include breakpoint("mobile") {
         top: calc(50% + 1rem);
@@ -488,7 +493,7 @@
     }
 }
 .googleOptionBtn {
-    bottom: 40px;
+    bottom: 94px;
 
     @include breakpoint("mobile") {
         top: calc(50% + 4rem);
@@ -509,6 +514,27 @@
     align-items: baseline;
 
  @include breakpoint("mobile") {
-    margin-bottom: 24px;
+    margin-bottom: 52px;
+    padding: 24px 14px;
  }
 }
+
+.forgotPasswordForm{
+    position: absolute;
+    width: 800px;
+    background-color: white;
+    transform: translateX(-529px);
+    display: flex;
+    align-items: center;
+    padding-bottom: 52px;
+    top: -2px;
+    @include breakpoint("mobile") {
+        transform: translateX(-60px);
+        width: 361px;
+        padding: 24px 14px;
+     }
+     :global(.pa2){
+        padding-bottom: 0px;
+     }
+}
+
