--- a/sass/product/vtex.store-components.scss
+++ b/sass/product/vtex.store-components.scss
@@ -163,6 +163,9 @@
 .imageElement--banner-sponsored {
   width: 100%;
   height: 200px;
+  @include mobile {
+    margin: 20px 0;
+  }
 }
 
 .productBrandName {
