--- a/sass/search/vtex.flex-layout.scss
+++ b/sass/search/vtex.flex-layout.scss
@@ -119,7 +119,7 @@
     display: flex;
     //align-items: center;
     padding: 0;
-    padding-top: 10px;
+    padding: 15px 0;
     justify-content: center;
     flex-direction: row-reverse;
     height: 78px;
