--- a/sass/login/vtex.login.scss
+++ b/sass/login/vtex.login.scss
@@ -35,6 +35,7 @@
     @include breakpoint("mobile"){
         margin-top: 8rem;
         width: 100%;
+        max-width: 344px;
     }
     .optionsSticky {
         .formTitle {
@@ -528,13 +529,18 @@
     align-items: center;
     padding-bottom: 52px;
     top: -2px;
-    @include breakpoint("mobile") {
-        transform: translateX(-60px);
-        width: 361px;
+    @include mobile() {
+        transform: translateX(-63px);
+        width: 356px;
         padding: 24px 14px;
      }
      :global(.pa2){
         padding-bottom: 0px;
      }
 }
+
+:global(.vtex-login-2-x-content--accountOptions){
+   padding-bottom: 0 !important;
+}
+
 
