[testeSiri] Adjusts in header mobile

--- a/sass/header/vtex.flex-layout.scss
+++ b/sass/header/vtex.flex-layout.scss
@@ -149,6 +149,10 @@
 }
 
 .flexCol {
+  &--active {
+    display: none;
+  }
+
   &--header-logo {
     align-items: center;
     justify-content: center;
