--- a/sass/header/vtex.flex-layout.scss
+++ b/sass/header/vtex.flex-layout.scss
@@ -43,11 +43,6 @@
 
   &--header-mobile {
     box-shadow: 0 1px 6px 0 rgba(0,0,0,0.3);
-
-    .flexRowContent {
-      background-color: $white;
-      padding: 20px 10px 0;
-    }
   }
 
   &--header-menu-mobile {
@@ -134,6 +129,16 @@
   }
 }
 
+.flexRowContent--header-mobile-teste {
+  background-color: $white;
+  padding: 0px 10px 0px;
+
+  &--shrink {
+    padding: 0px 8px 0px;
+    display: flex;
+  }
+}
+
 .flexRowContent--minicart-footer {
   background-color: #F4F7FA;
 }
@@ -149,6 +154,23 @@
 }
 
 .flexCol {
+  &--header-small-logo {
+    max-width: 0px;
+    margin: 0px;
+    transition: all 0.3s ease-in-out;
+    display: none;
+
+
+    &--shrink {
+      max-width: 38px;
+      max-height: unset;
+      width: 38px !important;
+      margin-right: 11px;
+      margin-left: 7px;
+      display: block;
+    }
+  }
+
   &--active {
     display: none;
   }
@@ -156,6 +178,16 @@
   &--header-logo {
     align-items: center;
     justify-content: center;
+
+    @include mobile {
+      padding-top: 15px;
+      padding-bottom: 5px;
+    }
+
+    &--shrink {
+      padding: 0;
+      height: 0;
+    }
   }
 
   &--menu-container-icons {
@@ -263,12 +295,23 @@
 }
 
 .flexColChild {
+  &--header-mobile {
+    max-width: 100vw;
+    overflow: hidden;
+  }
   .flexCol--header-mobile-searchBar {
     :global(.vtex-input-prefix__group) {
       border: 1.5px solid $blue-dark;
       border-radius: 4px;
     }
   }
+}
+
+
+
+.flexCol--header-mobile-searchBar--shrink {
+  width: calc(100vw - 72px) !important;
+  margin-right: auto;
 }
 
 .flexCol--header-containerSearchBar {
