--- a/sass/header/vtex.flex-layout.scss
+++ b/sass/header/vtex.flex-layout.scss
@@ -1,4 +1,3 @@
-
 @import '../_variables.scss';
 @import '../_media-queries.scss';
 
@@ -179,7 +178,7 @@
     align-items: center;
     justify-content: center;
 
-    @include mobile {
+    @include breakpoint ("mobile") {
       padding-top: 15px;
       padding-bottom: 5px;
     }
