--- a/react/components/CustomMegaMenu/style.css
+++ b/react/components/CustomMegaMenu/style.css
@@ -78,6 +78,12 @@
   }
 }
 
+.category-menu-item-icon {
+  margin-right: 10px;
+  width: 30px;
+  height: 30px;
+}
+
 .vtex-render-runtime-8-x-lazyload {
   background-color: #fff;
 }
