BRIC-36 product page adjustment of images

--- a/sass/product/vtex.store-components.scss
+++ b/sass/product/vtex.store-components.scss
@@ -242,7 +242,8 @@
     margin: 0 0 0 1rem;
 
     .thumbImg {
-      height: 5rem;
+      height: 7rem;
+      width: 5.4rem;
       overflow: hidden;
     }
   }
