--- a/react/components/CustomMegaMenu/style.css
+++ b/react/components/CustomMegaMenu/style.css
@@ -267,13 +267,13 @@
   }
 
   .category-menu-arrow {
-    height: 20px;
-    width: 25px;
-    transform: translate(9px,6px);
-    background-size: cover;
+    height: 12px;
+    width: 15px;
+    transform: translate(3px,1px);
+    background-size: 9px 13px;
     background-position: center;
     background-repeat: no-repeat;
-    background-image: url("../../../assets/icons/arrowRight.svg");
+    background-image: url("../../../assets/icons/arrowRightMenu.svg");
   }
   .mobile-mega-menu {
     top: 50px;
@@ -307,7 +307,7 @@
     height: 18px;
     display: inline-block;
     background-size: 15px;
-    background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg width='18px' height='17px' viewBox='0 0 18 17' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Ctitle%3EF4B0CE16-5F14-4A75-B791-C49388F4B52C%3C/title%3E%3Cg id='Page-1' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd' stroke-linecap='round'%3E%3Cg id='M/-1.3-Menu-2' transform='translate(-16.000000, -71.000000)' stroke='%23291660'%3E%3Cg id='icon-/-arrow-left' transform='translate(16.500000, 72.000000)'%3E%3Cg id='icon-/-arrow-right' transform='translate(8.500000, 7.500000) scale(-1, 1) translate(-8.500000, -7.500000) '%3E%3Cline x1='0' y1='7.5' x2='16' y2='7.5' id='Path'%3E%3C/line%3E%3Cpolyline id='Path-Copy' stroke-linejoin='round' points='9 15 17 7.54050331 9 0'%3E%3C/polyline%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    background-image: url("../../../assets/icons/arrowLeftMenu.svg");
     background-repeat: no-repeat;
     margin-right: 5px;
   }
