Fix: Ajustando cor da fonte no titulo do menu lateral 2º nivel e 3º nivel

--- a/react/components/CustomMegaMenu/style.css
+++ b/react/components/CustomMegaMenu/style.css
@@ -287,8 +287,8 @@
 
   .mobile-mega-menu-title {
     font-size: 18px;
-    color: #5A40A4;
-    font-weight: 600;
+    color: #291660;
+    font-weight: 500;
     display: flex;
     align-items: center;
     margin-top: 0;
