--- a/sass/product/vtex.product-quantity.scss
+++ b/sass/product/vtex.product-quantity.scss
@@ -14,6 +14,8 @@
     border-radius: 0.25rem;
     width: 11.25rem;
     background-color: $white;
+    display: flex;
+    justify-content: center;
 
     @include breakpoint('mobile') {
       margin-right: 0.25rem;
