[bugfix/bric51] Adjustment in mobile category item.

--- a/react/components/CustomMegaMenu/style.css
+++ b/react/components/CustomMegaMenu/style.css
@@ -241,7 +241,9 @@
 
   .category-menu-item {
     font-size: 18px;
-    text-align: center;
+    text-align: left;
+    white-space: nowrap;
+    overflow: hidden;
   }
 
   .link-utili-container{
