--- a/sass/product/vtex.slider-layout.scss
+++ b/sass/product/vtex.slider-layout.scss
@@ -106,7 +106,7 @@
     display: flex;
     align-items: flex-start;
     column-gap: 16px;
-    padding: 5px 0 20px 5px;
+    padding: 5px 5px 20px 5px;
   }
 }
 
