--- a/sass/login/vtex.login.scss
+++ b/sass/login/vtex.login.scss
@@ -380,44 +380,35 @@
 
       &:hover {
           filter: brightness(0.9);
-
+          background-color: #FFF;
           :global(.vtex-button__label) {
-
-              svg {
-                  width: 20px !important;
-              }
-
-              &::before {
-                  content: none !important;
-              }
-
               .oauthLabel::before {
                   color: #2B126B !important;
               }
-          }
+        }
       }
 
       :global(.vtex-button__label) {
           svg {
-              width: 10px;
+              width: 20px;
+              margin-left: 10px;
           }
 
+
           &::before {
-              content: url(/arquivos/facebook-icon.png);
-              width: 20px;
-              height: 20px;
+            content: "";
+            width: 0;
+            height: 0;
           }
 
           .oauthLabel {
               font-size: 0;
-
               &::before {
                   content: "Accedi con Facebook";
                   font-style: normal;
                   font-weight: 600;
                   font-size: 14px !important;
                   line-height: 100%;
-                  text-align: center;
                   color: #2B126B;
                   text-transform: uppercase;
 
