tamanho do bloco do subototal

--- a/checkout-ui-custom/checkout-ui-custom/checkout6-custom.css
+++ b/checkout-ui-custom/checkout-ui-custom/checkout6-custom.css
@@ -3726,7 +3726,7 @@ body {
   flex-direction: column;
   position: absolute;
   right: -50px;
-  top: 234px;
+  bottom: 40px;
   max-width: 328px;
   margin: 0 0 0 auto;
 }
