--- a/react/components/CustomMegaMenu/style.css
+++ b/react/components/CustomMegaMenu/style.css
@@ -1,3 +1,25 @@
+/* width */
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #FFF;
+  border-radius: 30px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #b8b8b8; 
+  border-radius: 30px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #b8b8b8;
+}
+
 .top-navigation {
   width: 100%
 }
@@ -57,25 +79,19 @@
   max-height: 100vh;
   display: flex;
   flex-direction: column;
-  top: 44px;
-  left: 95%;
+  top: 45px;
+  left: 300px;
   position: absolute;
   background: #ffffff;
   transform: translate(0px,-45px);
-  padding: 10px;
-  width: 77.5vw;
+  padding: 10px 60px 10px 10px;
+  width: calc(100vw - 302px);
   overflow: auto;
 }
 
 .bannerSubCategory {
   width: 100%;
-  height: 100px;
-}
-
-@media only screen and (max-width: 1480px) and (min-width: 1210px) {
-  .bannerSubCategory, .submenu-items{
-    width: 92%;
-  }
+  height: auto;
 }
 
 .vtex-render-runtime-8-x-lazyload {
@@ -90,7 +106,7 @@
   margin: 0;
   padding: 15px 10px 40px;
   width: 100%;
-  columns: 6 200px;
+  columns: 3 200px;
   column-gap: 3rem;
 }
 
@@ -129,11 +145,13 @@
 }
 
 .subcategory-container {
+  display: block;
   height: max-content;
-  width: max-content;
   list-style: none;
-  display: inline-block;
-  padding: 0 10px;
+  padding-bottom: 2rem;
+  padding-right: 20px;
+  width: 100%;
+  width: max-content;
 }
 
 .subcategory-title{
@@ -142,10 +160,11 @@
   letter-spacing: 0;
   line-height: 19px;
   color: #332C32;
+  max-width: 240px;
+  margin-top: 0;
 }
 .subcategory-item {
   text-align: left;
-  padding-right: 50px;
   list-style: none;
   margin-bottom: 8px;
 }
@@ -162,7 +181,9 @@
   font-size: 14px;
   line-height: 20px;
 }
-
+.subcategory-item a:hover {
+text-decoration: underline;
+}
 .submenu-item-third-level a {
   color: #5c5c5c;
 }
@@ -180,12 +201,12 @@
 
 
 @media (min-width: 768px) and (max-width: 1200px) {
-  .submenu-items {
+  /* .submenu-items {
     padding: 10px 10px 20px;
-  }
-  .megamenu--active {
+  } */
+  /* .megamenu--active {
     width: 65vw;
-  }
+  } */
 }
 
 @media screen and (max-width: 768px) {
@@ -239,10 +260,10 @@
     border-bottom: 1px solid #D8D8D8;
   }
 
-  .category-menu-item {
+  /* .category-menu-item {
     font-size: 18px;
     text-align: center;
-  }
+  } */
 
   .link-utili-container{
     padding: 0;
@@ -250,9 +271,7 @@
   .category-menu-item{
     padding:0 ;
   }
-  .mobile-menu-header-category--active .category-menu-item {
-    color: #ffffff;
-  }
+
   .mobile-menu-header-category svg,
   .mobile-menu-header-subcategory svg {
     top: 6px;
@@ -270,16 +289,17 @@
     background-image: url("../../../assets/icons/arrowRight.svg");
   }
   .mobile-mega-menu {
-    top: 50px;
+    top: 0;
     left: 0;
     z-index: 2;
     width: 100%;
     height: 100vh;
-    position: absolute;
+    position: fixed;
     background-color: #ffffff;
   }
 
   .mobile-mega-menu-title {
+    padding-top: 20px;
     font-size: 18px;
     color: #5A40A4;
     font-weight: 600;
@@ -287,12 +307,14 @@
     align-items: center;
     margin-top: 0;
     padding-left: 11px;
+    padding-right: 60px;
   }
 
   .mobile-subcategory-overflow {
     max-height: 100vh;
     overflow-y: auto;
     padding: 0;
+    padding-bottom: 70px;
   }
 
   .mobile-mega-menu-title:before {
