--- a/checkout-ui-custom/checkout-ui-custom/checkout6-custom.css
+++ b/checkout-ui-custom/checkout-ui-custom/checkout6-custom.css
@@ -3320,6 +3320,11 @@ body {
     height: 60px;
   }
 
+  p.client-phone label::after,
+  p.ship-postalCode label::after {
+    content: "*";
+  }
+
 @media screen and (min-width: 760px) {
 
   .footer-container {
@@ -4110,7 +4115,7 @@ body.v-custom-step-profile .client-pre-email h3.client-pre-email-h span:before, 
   .client-pre-email .pre-email .client-email input {
     margin-top: 8px; }
   .client-pre-email .pre-email .client-email::before {
-    content: "Inserisci il tuo indirizzo email";
+    content: "Inserisci il tuo indirizzo email*";
     font-weight: 300;
     font-size: 14px;
     line-height: 18px;
