inclusão de * em novos inputs

--- a/checkout-ui-custom/checkout-ui-custom/checkout6-custom.css
+++ b/checkout-ui-custom/checkout-ui-custom/checkout6-custom.css
@@ -3321,7 +3321,10 @@ body {
   }
 
   p.client-phone label::after,
-  p.ship-postalCode label::after {
+  p.ship-postalCode label::after,
+  p.ship-street label::after,
+  p.ship-city label::after,
+  p.ship-state label::after {
     content: "*";
   }
 
