[bugfix/bric60] fix tag saving image link.

--- a/sass/product/vtex.product-price.scss
+++ b/sass/product/vtex.product-price.scss
@@ -15,7 +15,7 @@
     }
 
     &::before {
-      content: url("assets/icons/tag_saving.svg");
+      content: url("/arquivos/tag_saving.svg");
       display: block;
       color: $white;
       font-weight: 400;
