Fix: ajusta o transition da cor

--- a/sass/login/vtex.login.scss
+++ b/sass/login/vtex.login.scss
@@ -266,6 +266,7 @@
           .sendButtonActive {
             :global(.vtex-button) {
                 background-color: #291660;
+                transition: 1s;
             }
           }
 
