--- a/sass/login/vtex.login.scss
+++ b/sass/login/vtex.login.scss
@@ -256,10 +256,10 @@
                   font-size: 14px;
                   text-transform: initial;
                   transition: .2s ease-in-out;
-  
+
                   &:hover {
-                      background: #8E8E8E;
-                  }
+                    background: #8E8E8E;
+                }
               }
           }
 
@@ -267,6 +267,9 @@
             :global(.vtex-button) {
                 background-color: #291660;
                 transition: 1s;
+                &:hover {
+                    background: #1B0E41;
+                }
             }
           }
 
