--- a/checkout-ui-custom/checkout-ui-custom/checkout6-custom.css
+++ b/checkout-ui-custom/checkout-ui-custom/checkout6-custom.css
@@ -3746,11 +3746,11 @@ body {
 .summary-template-holder .cart-links-bottom {
   display: flex !important;
   flex-direction: column;
-  position: absolute;
   right: -50px;
   bottom: 30px;
   max-width: 328px;
   margin: 0 0 0 auto;
+  margin-top: -136px;
 }
 
 .summary-template-holder .row-fluid {
