BRIC-76 Postal code on mobile

--- a/checkout-ui-custom/checkout-ui-custom/checkout6-custom.css
+++ b/checkout-ui-custom/checkout-ui-custom/checkout6-custom.css
@@ -4762,9 +4762,6 @@ body.debug-on > *:not(.container-main):not(.main-header):not(.main-footer):not(#
 #shipping-calculate-link {
   opacity: 0;
 }
-
-@media (max-width: 690px) {
-  .summary-template-holder {
-    display:none;
-  }
+.summary-totalizers.cart-totalizers.pull-right {
+  display: none;
 }
