[bugfix/bric85] Checkout quantity text adjustment.

--- a/checkout-ui-custom/checkout-ui-custom/checkout6-custom.css
+++ b/checkout-ui-custom/checkout-ui-custom/checkout6-custom.css
@@ -3540,7 +3540,7 @@ body {
   position: relative; }
 
 .table.cart-items thead tr th.quantity::before {
-  content: "Qtd.";
+  content: "Qtà.";
   font-style: normal;
   font-weight: 300;
   font-size: 16px;
