--- a/sass/product/vtex.product-summary.scss
+++ b/sass/product/vtex.product-summary.scss
@@ -12,9 +12,9 @@
   transition: all 0.4s ease;
   background: $white;
 
-  @include breakpoint("mobile") {
-    min-width: 200px;
-  }
+  // @include breakpoint("mobile") {
+  //   min-width: 200px;
+  // }
 
   :global(.vtex-product-price-1-x-installments) {
     font-size: 14px;
