--- a/sass/vtex.my-account.scss
+++ b/sass/vtex.my-account.scss
@@ -44,7 +44,7 @@
       margin: 0;
       padding: 14px 0 14px 10px;
     }
-    
+
     padding-left: 0;
     .menuLink {
       margin: 0;
@@ -53,7 +53,24 @@
       color: $primary-default;
     }
     .menuLinks {
-      
+      div div:nth-child(5) a{
+        position: relative;
+        &::after{
+          position: absolute;
+          top: 0;
+          left: 10px;
+          width: 110px;
+          height: 44px;
+          display: flex;
+          background-color: #fff;
+          content: 'Storico ordini';
+          align-items: center;
+          @media screen and (max-width: 48rem) {
+            padding-left: 16px;
+            left: -16px;
+          }
+        }
+      }
       :global(.vtex-account_menu-link.b--action-primary) {
         color: #402493;
         border-left: 4px solid #402493;
@@ -85,7 +102,7 @@
       line-height: 14px;
       background-image: url('assets/icons/home.svg');
       background-repeat: no-repeat;
-      @media screen and (max-width: 48rem) { 
+      @media screen and (max-width: 48rem) {
         display: none;
       }
     }
@@ -194,7 +211,7 @@
       line-height: 14px;
       background-image: url('assets/icons/home.svg');
       background-repeat: no-repeat;
-      @media screen and (max-width: 48rem) { 
+      @media screen and (max-width: 48rem) {
         display: none;
       }
     }
@@ -266,11 +283,11 @@
       line-height: 14px;
       // background-image: url('assets/icons/home.svg');
       background-repeat: no-repeat;
-      @media screen and (max-width: 48rem) { 
+      @media screen and (max-width: 48rem) {
         display: none;
       }
     }
-    
+
     :global(.vtex-my-account-1-x-boxContainer) {
       &::before {
         content: '/ I miei indirizzi';
@@ -285,7 +302,7 @@
         line-height: 14px;
         background-image: url('assets/icons/home.svg');
         background-repeat: no-repeat;
-        @media screen and (max-width: 48rem) { 
+        @media screen and (max-width: 48rem) {
           display: none;
         }
       }
@@ -296,7 +313,7 @@
     :global(.vtex-address-form-4-x-container) {
       border-color: #DFDFDF;
     }
-    
+
     :global(.flex-auto) {
       max-width: 920px;
     }
@@ -326,7 +343,7 @@
           position: absolute;
           transform: translateY(-84px) translateX(-12px);
           background-color: white;
-          @media screen and (max-width: 48rem) { 
+          @media screen and (max-width: 48rem) {
             transform: translateY(-65px) translateX(4px);
             font-size: 24px;
           }
@@ -414,7 +431,7 @@
           flex-wrap: wrap;
           gap: 15px;
 
-          :global(.vtex-address-form__street) 
+          :global(.vtex-address-form__street)
           :global(.vtex-address-form__receiverName) {
             width: 40%;
           }
@@ -457,7 +474,7 @@
       line-height: 14px;
       background-image: url('assets/icons/home.svg');
       background-repeat: no-repeat;
-      @media screen and (max-width: 48rem) { 
+      @media screen and (max-width: 48rem) {
         display: none;
       }
     }
@@ -479,7 +496,7 @@
       line-height: 14px;
       background-image: url('assets/icons/home.svg');
       background-repeat: no-repeat;
-      @media screen and (max-width: 48rem) { 
+      @media screen and (max-width: 48rem) {
         display: none;
       }
     }
@@ -533,7 +550,7 @@
     border-color: #d8d8d8;
   }
 
-  
+
 
   :global(.vtex-account__page) {
     width: 100%;
@@ -585,7 +602,7 @@
         line-height: 14px;
         background-image: url('assets/icons/home.svg');
         background-repeat: no-repeat;
-        @media screen and (max-width: 48rem) { 
+        @media screen and (max-width: 48rem) {
           display: none;
         }
       }
@@ -614,7 +631,7 @@
 
       .boxContainerFooter {
         justify-content: center;
-        padding-bottom: 24px;        
+        padding-bottom: 24px;
           :global(.vtex-button) {
             padding: 0;
             border: none;
@@ -703,7 +720,7 @@
         line-height: 14px;
         background-image: url('assets/icons/home.svg');
         background-repeat: no-repeat;
-        @media screen and (max-width: 48rem) { 
+        @media screen and (max-width: 48rem) {
           display: none;
         }
       }
@@ -763,7 +780,7 @@
         line-height: 14px;
         background-image: url('assets/icons/home.svg');
         background-repeat: no-repeat;
-        @media screen and (max-width: 48rem) { 
+        @media screen and (max-width: 48rem) {
           display: none;
         }
       }
@@ -787,8 +804,35 @@
   }
 
   :global(.legacy-orders) {
+    position: relative;
+    &::after {
+      content: 'Storico Ordini';
+      position: absolute;
+      color: $primary-default;
+      font-size: 28px;
+      font-weight: bold;
+      letter-spacing: 0;
+      line-height: 50px;
+      top: -70px;
+      left: -2px;
+      background-color: #fff;
+      width: 200px;
+      height: inherit;
+      @media screen and (min-width: 43rem) and (max-width: 48rem) {
+        height: inherit;
+        top: -55px;
+        left: 14px;
+      }
+      @media screen and (max-width: 43rem) {
+        font-size: 24px;
+        line-height: 24px;
+        top: -44px;
+        left: 13px;
+        height: 42px;
+      }
+    }
     &::before {
-      content: '/ Legacy Orders';
+      content: '/ Storico ordini';
       transform: translateY(-171px) translateX(-168px);
       position: absolute;
       color: #332C32;
@@ -800,11 +844,11 @@
       line-height: 14px;
       background-image: url('assets/icons/home.svg');
       background-repeat: no-repeat;
-      @media screen and (max-width: 48rem) { 
+      @media screen and (max-width: 48rem) {
           display: none;
       }
     }
-    
+
   }
 
   :global(.wish-list) {
@@ -821,7 +865,7 @@
       line-height: 14px;
       background-image: url('assets/icons/home.svg');
       background-repeat: no-repeat;
-      @media screen and (max-width: 48rem) { 
+      @media screen and (max-width: 48rem) {
         display: none;
       }
     }
@@ -1196,16 +1240,16 @@
         :global(.vtex-product-summary-2-x-image){
           max-height: 130px !important;
         }
-        
+
       }
-      
+
 
       :global(.vtex-flex-layout-0-x-flexColChild--specificationNameCol
       [data-specification-name='Premium'])::after{
         content: url(/arquivos/premium-shipping-mobile.svg);
         top: -48px;
         left: 84px;
-        
+
       }
 
       :global(.vtex-flex-layout-0-x-flexColChild--specificationNameCol
@@ -1214,7 +1258,7 @@
         top: -40px;
         left: 64px;
       }
-      
+
 
       :global(.vtex-product-summary-2-x-priceContainer) {
         align-items: start;
